--- a/thirst_quest/pubspec.yaml
+++ b/thirst_quest/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   geolocator: ^13.0.1
   http: ^1.2.2
   json_annotation: ^4.9.0
+  flutter_map_cancellable_tile_provider: ^3.0.2
 
 dev_dependencies:
   flutter_test:
