--- a/thirst_quest/pubspec.yaml
+++ b/thirst_quest/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   http: ^1.2.2
   json_annotation: ^4.9.0
   flutter_map_cancellable_tile_provider: ^3.0.2
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
