--- a/thirst_quest/pubspec.yaml
+++ b/thirst_quest/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   json_annotation: ^4.9.0
   flutter_map_cancellable_tile_provider: ^3.0.2
   shared_preferences: ^2.3.2
+  get_it: ^8.0.1
 
 dev_dependencies:
   flutter_test:
