--- a/thirst_quest/pubspec.yaml
+++ b/thirst_quest/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_map_cancellable_tile_provider: ^3.0.2
   shared_preferences: ^2.3.2
   get_it: ^8.0.1
+  maps_launcher: ^2.2.1
 
 dev_dependencies:
   flutter_test:
