--- a/thirst_quest/pubspec.yaml
+++ b/thirst_quest/pubspec.yaml
@@ -45,7 +45,10 @@ dependencies:
   flutter_map_cancellable_tile_provider: ^3.0.2
   shared_preferences: ^2.3.2
   get_it: ^8.0.1
-  maps_launcher: ^2.2.1
+  maps_launcher:
+    git:
+      url: https://github.com/pikaju/flutter-maps-launcher.git
+      ref: master
 
 dev_dependencies:
   flutter_test:
