--- a/thirst_quest/macos/Runner/Configs/AppInfo.xcconfig
+++ b/thirst_quest/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = thirst_quest
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.thirstQuest
+PRODUCT_BUNDLE_IDENTIFIER = com.src.thirstQuest
 
 // The copyright displayed in application information
-PRODUCT_COPYRIGHT = Copyright © 2024 com.example. All rights reserved.
+PRODUCT_COPYRIGHT = Copyright © 2024 com.src. All rights reserved.
