--- a/thirst_quest/windows/runner/Runner.rc
+++ b/thirst_quest/windows/runner/Runner.rc
@@ -89,11 +89,11 @@ BEGIN
     BEGIN
         BLOCK "040904e4"
         BEGIN
-            VALUE "CompanyName", "com.example" "\0"
+            VALUE "CompanyName", "com.src" "\0"
             VALUE "FileDescription", "thirst_quest" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
             VALUE "InternalName", "thirst_quest" "\0"
-            VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
+            VALUE "LegalCopyright", "Copyright (C) 2024 com.src. All rights reserved." "\0"
             VALUE "OriginalFilename", "thirst_quest.exe" "\0"
             VALUE "ProductName", "thirst_quest" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
