--- a/thirst_quest/pubspec.yaml
+++ b/thirst_quest/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
       url: https://github.com/pikaju/flutter-maps-launcher.git
       ref: master
   google_sign_in: ^6.2.2
+  rename_app: ^1.6.1
 
 dev_dependencies:
   flutter_test:
