--- a/thirst_quest/pubspec.yaml
+++ b/thirst_quest/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
       ref: master
   google_sign_in: ^6.2.2
   rename_app: ^1.6.1
+  flutter_map_marker_cluster: ^1.4.0
 
 dev_dependencies:
   flutter_test:
