--- a/thirst_quest/pubspec.yaml
+++ b/thirst_quest/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   google_sign_in: ^6.2.2
   rename_app: ^1.6.1
   flutter_map_marker_cluster: ^1.4.0
+  google_sign_in_web: ^0.12.4+3
 
 dev_dependencies:
   flutter_test:
