--- a/thirst_quest/pubspec.yaml
+++ b/thirst_quest/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
   flutter:
     sdk: flutter
   carousel_slider: ^5.0.0
+  flutter_staggered_grid_view: ^0.4.0
 
 
   # The following adds the Cupertino Icons font to your application.
