--- a/thirst_quest/pubspec.yaml
+++ b/thirst_quest/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   flutter_map_marker_cluster: ^1.4.0
   google_sign_in_web: ^0.12.4+3
   flutter_typeahead: ^5.2.0
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
