--- a/thirst_quest/pubspec.yaml
+++ b/thirst_quest/pubspec.yaml
@@ -57,6 +57,7 @@ dependencies:
   google_sign_in_web: ^0.12.4+3
   flutter_typeahead: ^5.2.0
   image_picker: ^1.1.2
+  email_validator: ^3.0.0
 
 dev_dependencies:
   flutter_test:
