--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "cwd": "thirst_quest",
             "request": "launch",
             "type": "dart",
-            "args": ["--web-renderer", "html"]
+            "args": ["--web-renderer", "html", "--web-port", "5000"]
         },
         {
             "name": "thirst_quest (profile mode)",
